
* map03: Neues Monster hinzugefügt: Slimer
* UI: "Erfolg" Screen nach jedem Level
* Global: Im angezeigten Punktestand werden die Punkte aus den anderen Maps jetzt mit einberechnet
* Audio: Master Lautstärkeregler hinzugefügt

## Alpha 015 (Unreleased)

* Global: Ausdauer entfernt
* Global: Kamera-Bewegung optimiert
* map02: Kakteen hinzugefügt
* Controller: Vibration hinzugefügt
* map03: Slimer hinzugefügt (noch ohne AI)

## Alpha 014 (21.06.2024)

* Global: Äpfel hinzugefügt
* map02: Tretminen hinzugefügt
* Audio: "Beep" Soundeffekt ersetzt
* Global: Support für Rii USB Classic Controller wieder entfernt
* Launcher: Es werden nur noch vom Betriebssystem unterstützte Audio Backends angezeigt
* UI: Lautstärke-Regler für Umgebungsgeräusche hinzugefügt
* Menüpunkt "Level neu Starten" zu Pausenmenü hinzugefügt

## Global: Alpha 013 (24.05.2024)

* map02: Puzzle mit Strom-Hindernis hinzugefügt
* map02: kann jetzt durchgespielt werden
* map03: hinzugefügt
* Global: Gegner KI verbessert
* UI: Bloody Screen Effekt hinzugefügt
* UI: Menüpunkt "Online-Bestenliste" hinzugefügt
* UI: Unnötige Grafikeinstellungen entfernt
* UI: Neue Hauptmenü Musik
* UI: Ladebildschirm Musik hinzugefügt
* UI: Lautstärke-Regler zu Audioeinstellungen hinzugefügt

## Alpha 012 (17.05.2024)

* map01: Autos kollidieren nicht mehr nach einiger Spielzeit
* map02: Hühner sterben jetzt, wenn sie von einem Auto überfahren werden
* map02: Kettensäge und Bäume hinzugefügt
* map02: Strom-Hindernis hinzugefügt
* map02: Neuer Musik-Track hinzugefügt
* map02: Atmosphären Sound hinzugefügt
* map02: Enten hinzugefügt
* map02: Himmel animiert
* Global: Ausdauer hinzugefügt
* Global: Wenn Hühner sterben, werden sie durch eine Feder ersetzt
* Global: Fußschritte Sound-Effekt hinzugefügt
* Global: Punktestand für das aktuelle Level wird angezeigt
* Global Mehrfach im Inventar befindliche Gegenstände können jetzt korrekt gedroppt werden
* UI: Nach einem Game Over wird das aktuelle Level neu gestartet