@@ -5,6 +5,7 @@ COLLISION_ENEMY = "enemy"
 COLLISION_GRUNT = "grunt"
 COLLISION_BULLET = "bullet"
 COLLISION_SKULL_BULLET = "skull_bullet"
+COLLISION_SLIMER_BULLET = "slimer_bullet"
 COLLISION_WATER = "water"
 COLLISION_WALL = "wall"
 COLLISION_PLAYER = "player"
